compiling_error.txt
/home/sejuti/C/circularLinkedlist.c: In function ‘countNodes’:
/home/sejuti/C/circularLinkedlist.c:111:14: error: ‘null’ undeclared (first use in this function)
   if(head != null){
              ^
/home/sejuti/C/circularLinkedlist.c:111:14: note: each undeclared identifier is reported only once for each function it appears in
/home/sejuti/C/circularLinkedlist.c:116:3: error: expected ‘;’ before ‘}’ token
   }
   ^
/home/sejuti/C/circularLinkedlist.c:138:1: error: expected declaration or statement at end of input
 }
 ^
